--- a/web/ui/src/index.scss
+++ b/web/ui/src/index.scss
@@ -12,3 +12,4 @@ span.spacer {
 }
 .right {text-align:right;}
 .header-containers, .headers-container div { display: flex; }
+.half-width { width: 50%; }
